small changes & link to github

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata|PT+Sans|PT+Sans+Narrow:700">
   <link rel="stylesheet" href="/scratch.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS_CHTML-full" type="text/javascript"></script>
+  <noscript><meta http-equiv="refresh" content="0; URL=/nojs.pl"></noscript>
 </head>
 <body>
 <header>
   <h1 class="title">Markdown Scratchpad</h1>
-  <noscript><meta http-equiv="refresh" content="0; URL=/nojs.pl"></noscript>
 </header>
 <div class="row">
 <div class="col left">
@@ -26,6 +26,7 @@
 </div><!-- /#columns -->
 <footer>
   <p>
+    <a href="https://github.com/qjqqyy/pandoc-anywhere">Source code</a>.
     Math rendering by <a href="https://www.mathjax.org/" target="_blank">MathJax</a>,
     markdown rendering by <a href="https://pandoc.org" target="_blank">Pandoc</a>,
     page layout is blatantly inspired by <a href="http://mathb.in" target="_blank">mathb.in</a>.
