implement --number-sections

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata|PT+Sans|PT+Sans+Narrow:700">
   <link rel="stylesheet" href="scratch.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS_CHTML-full" type="text/javascript"></script>
-  <noscript><meta http-equiv="refresh" content="0; URL=/nojs.pl"></noscript>
+  <noscript><meta http-equiv="refresh" content="0; URL=nojs.pl"></noscript>
 </head>
 <body><div id="bigwrap">
 <header>
@@ -35,6 +35,12 @@
   <a href="LICENSE.txt" target="_blank">ISC License</a>.</p>
 </footer>
 </div><!-- /.bigwrap --> </body>
-<script src="refresh.js"></script>
+<div id="floating_thing">
+  <section id="settings_hideable">
+    <input type="checkbox" id="cb_numbersections" name="numbersections" value="1">
+    <label for="cb_numbersections">Number Sections</label>
+  </section>
+</div>
+<script src="scratch.js"></script>
 </html>
 <!-- vim: set sw=2 et: -->
