--- a/old.html
+++ b/old.html
@@ -26,7 +26,7 @@
 </div><!-- /.row -->
 <footer>
   <p>
-    <a href="https://github.com/qjqqyy/pandoc-anywhere">Source code</a>.
+    <a href="https://github.com/qjqqyy/scratch">Source code</a>.
     Math rendering by <a href="https://www.mathjax.org/" target="_blank">MathJax</a>,
     markdown rendering by <a href="https://pandoc.org" target="_blank">Pandoc</a>,
     page layout is blatantly inspired by <a href="http://mathb.in" target="_blank">mathb.in</a>.
