--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </div><!-- /.row -->
 <footer>
   <p>
-    <a href="https://github.com/qjqqyy/pandoc-anywhere">Source code</a>.
+    <a href="https://github.com/qjqqyy/scratch">Source code</a>.
     | Powered by <a href="https://www.mathjax.org/" target="_blank">MathJax</a>,
     <a href="https://pandoc.org" target="_blank">Pandoc</a>, and
     <a href="https://codemirror.net/" target="_blank">CodeMirror</a>.
